add support for qdrant

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 # Postgresql Vector DB
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DB_NAME=
+PG_USER=
+PG_PASSWORD=
+PG_HOST=
+PG_PORT=
+PG_NAME=
+
+# Qdrant DB
+Q_HOST=
+Q_API_KEY=
+Q_PORT=
+Q_COLLECTION=
+Q_SIZE=
