add chromadb support

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
-# Postgresql Vector DB
+# PgvectorDB
 PG_USER=
 PG_PASSWORD=
 PG_HOST=
 PG_PORT=
 PG_NAME=
 
-# Qdrant DB
+# QdrantDB
 Q_HOST=
 Q_API_KEY=
 Q_PORT=
 Q_COLLECTION=
 Q_SIZE=
+
+# ChromaDB
+CH_HOST=
+CH_PORT=
+CH_AUTH_PROVIDER=
+CH_AUTH_CREDENTIALS=
+CH_COLLECTION_NAME=
+CH_DISTANCE_FUNCTION=
