--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pgvector = "^0.3.5"
 sqlalchemy = "^2.0.36"
 psycopg2 = "^2.9.10"
 qdrant-client = "^1.12.0"
+chromadb = "^0.5.15"
 
 
 [build-system]
