--- a/docker-compose/docker-compose.qdrant.yml
+++ b/docker-compose/docker-compose.qdrant.yml
@@ -1,6 +1,6 @@
 services:
   qdrant:
-    image: qdrant/qdrant:latest
+    image: qdrant/qdrant:v1.12.1
     container_name: qdrant
     restart: unless-stopped
     ports:
