--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.12"
 pgvector = "^0.3.5"
 sqlalchemy = "^2.0.36"
 qdrant-client = "^1.12.0"
-chromadb = "^0.5.15"
+chromadb = "0.5.20"
 psycopg2-binary = "^2.9.10"
 
 
