add integration test pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyvectordb"
-version = "0.1.4"
+version = "0.1.5"
 description = "Simple Wrapper for vector database in Python with minimal support for CRUD and retrieve."
 authors = ["M Razif Rizqullah <razifrizqullah@gmail.com>"]
 repository = "https://github.com/rizquuula/pyvectordb"
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.36"
 qdrant-client = "^1.12.0"
 chromadb = "0.5.20"
 psycopg2-binary = "^2.9.10"
+pytest = "^8.3.3"
 
 
 [build-system]
