--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,4 @@ CH_AUTH_PROVIDER=
 CH_AUTH_CREDENTIALS=
 CH_COLLECTION_NAME=
 CH_DISTANCE_FUNCTION=
-
-## uncomment if chromadb fail to import due to protobuf
-# PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
