--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyvectordb"
-version = "0.1.5.1"
+version = "0.1.6"
 description = "Simple Wrapper for vector database in Python with minimal support for CRUD and retrieve."
 authors = ["M Razif Rizqullah <razifrizqullah@gmail.com>"]
 repository = "https://github.com/rizquuula/pyvectordb"
@@ -8,13 +8,19 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pgvector = "^0.3.5"
-sqlalchemy = "^2.0.36"
-qdrant-client = "^1.12.0"
-chromadb = "0.5.20"
-psycopg2-binary = "^2.9.10"
-pytest = "^8.3.3"
+pgvector = {version = "^0.3.5", optional = true}
+sqlalchemy = {version = "^2.0.36", optional = true}
+qdrant-client = {version = "^1.12.0", optional = true}
+chromadb = {version = "0.5.20", optional = true}
+psycopg2-binary = {version = "^2.9.10", optional = true}
+pytest = {version = "^8.3.3", optional = true}
 
+[tool.poetry.extras]
+pgvector = ["pgvector", "sqlalchemy", "psycopg2-binary"]
+qdrant = ["qdrant-client"]
+chromadb = ["chromadb"]
+dev = ["pgvector", "sqlalchemy", "qdrant-client", "chromadb", "psycopg2-binary", "pytest"]
+all = ["pgvector", "sqlalchemy", "qdrant-client", "chromadb", "psycopg2-binary"]
 
 [build-system]
 requires = ["poetry-core"]
