--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,22 @@
-[tool.poetry]
+[project]
 name = "pyvectordb"
 version = "0.1.7.1"
 description = "Simple Wrapper for vector database in Python with minimal support for CRUD and retrieve."
-authors = ["M Razif Rizqullah <razifrizqullah@gmail.com>"]
-repository = "https://github.com/rizquuula/pyvectordb"
+authors = [{name = "M Razif Rizqullah", email = "razifrizqullah@gmail.com"}]
 readme = "README.md"
+requires-python = ">=3.13"
+dependencies = []
 
-[tool.poetry.dependencies]
-python = "^3.10"
-pgvector = {version = "^0.3.5", optional = true}
-sqlalchemy = {version = "^2.0.36", optional = true}
-qdrant-client = {version = "^1.12.0", optional = true}
-chromadb = {version = "0.5.20", optional = true}
-psycopg2-binary = {version = "^2.9.10", optional = true}
-pytest = {version = "^8.3.3", optional = true}
-
-[tool.poetry.extras]
-pgvector = ["pgvector", "sqlalchemy", "psycopg2-binary"]
-qdrant = ["qdrant-client"]
-chromadb = ["chromadb"]
-dev = ["pgvector", "sqlalchemy", "qdrant-client", "chromadb", "psycopg2-binary", "pytest"]
-all = ["pgvector", "sqlalchemy", "qdrant-client", "chromadb", "psycopg2-binary"]
+[project.optional-dependencies]
+pgvector = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "psycopg2-binary>=2.9.10"]
+qdrant = ["qdrant-client>=1.16.2"]
+chromadb = ["chromadb>=1.5.0"]
+dev = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "psycopg2-binary>=2.9.10", "pytest>=8.3.3"]
+all = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "psycopg2-binary>=2.9.10"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
