feat: add Pinecone vector database support

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,11 @@ CH_AUTH_CREDENTIALS=
 CH_COLLECTION_NAME=
 CH_DISTANCE_FUNCTION=
 PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+
+# PineconeDB
+PINECONE_API_KEY=
+PINECONE_HOST=
+PINECONE_INDEX_NAME=
+PINECONE_DIMENSION=
+PINECONE_CLOUD=aws
+PINECONE_REGION=us-east-1
