Add ruff configuration and Makefile for auto formatting
- Add Makefile with 'make ruff' target
- Add ruff config to pyproject.toml (line-length=120, target-version=py313)
- Fix lint errors: E402, E701, E711, F401, UP035
- Only ignore E501 (line too long)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,19 @@ build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
+[tool.ruff]
+line-length = 120
+target-version = "py313"
+exclude = [
+    ".git",
+    "__pycache__",
+    ".venv",
+    "build",
+    "dist",
+]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]
+fixable = ["ALL"]
+ignore = ["E501"]
