--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,10 @@ PINECONE_INDEX_NAME=
 PINECONE_DIMENSION=
 PINECONE_CLOUD=aws
 PINECONE_REGION=us-east-1
+
+# MilvusDB
+MILVUS_HOST=
+MILVUS_PORT=19530
+MILVUS_COLLECTION=
+MILVUS_VECTOR_SIZE=
+MILVUS_DISTANCE_FUNCTION=cosine
