--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ pgvector = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "psycopg2-binary>=2.9.10"]
 qdrant = ["qdrant-client>=1.16.2"]
 chromadb = ["chromadb>=1.5.0"]
 pinecone = ["pinecone>=5.0.0"]
-dev = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "psycopg2-binary>=2.9.10", "pytest>=8.3.3"]
-all = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "psycopg2-binary>=2.9.10"]
+milvus = ["pymilvus>=2.4.0"]
+dev = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "pymilvus>=2.4.0", "psycopg2-binary>=2.9.10", "pytest>=8.3.3"]
+all = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "pymilvus>=2.4.0", "psycopg2-binary>=2.9.10"]
 
 [build-system]
 requires = ["hatchling"]
