feat: add Weaviate vector database support
- Add WeaviateDB class implementing VectorDB abstract base class
- Add distance enum mapping for Weaviate metrics
- Add docker-compose configuration for Weaviate
- Add example usage and integration tests
- Update README with Weaviate documentation
- Add weaviate-client dependency to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ qdrant = ["qdrant-client>=1.16.2"]
 chromadb = ["chromadb>=1.5.0"]
 pinecone = ["pinecone>=5.0.0"]
 milvus = ["pymilvus>=2.4.0"]
-dev = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "pymilvus>=2.4.0", "psycopg2-binary>=2.9.10", "pytest>=8.3.3"]
-all = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "pymilvus>=2.4.0", "psycopg2-binary>=2.9.10"]
+weaviate = ["weaviate-client>=4.0.0"]
+dev = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "pymilvus>=2.4.0", "weaviate-client>=4.0.0", "psycopg2-binary>=2.9.10", "pytest>=8.3.3"]
+all = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "pinecone>=5.0.0", "pymilvus>=2.4.0", "weaviate-client>=4.0.0", "psycopg2-binary>=2.9.10"]
 
 [build-system]
 requires = ["hatchling"]
