--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,12 @@ MILVUS_PORT=19530
 MILVUS_COLLECTION=
 MILVUS_VECTOR_SIZE=
 MILVUS_DISTANCE_FUNCTION=cosine
+
+# WeaviateDB
+WEAVIATE_HOST=localhost
+WEAVIATE_PORT=8080
+WEAVIATE_GRPC_PORT=50051
+WEAVIATE_API_KEY=
+WEAVIATE_COLLECTION=
+WEAVIATE_VECTOR_SIZE=
+WEAVIATE_DISTANCE_FUNCTION=cosine
