--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -85,21 +85,8 @@ jobs:
           fi
 
       - name: Post review comment
-        uses: actions/github-script@v7
         if: steps.openrouter.outputs.review
-        with:
-          github-token: ${{ github.token }}
-          script: |
-            const review = `${{ steps.openrouter.outputs.review }}`;
-            
-            // Check if it's an error message
-            if (review.includes('⚠️ Code review failed')) {
-              console.log('Review failed, posting error message');
-            }
-            
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.pull_request.number,
-              body: review
-            });
+        env:
+          REVIEW: ${{ steps.openrouter.outputs.review }}
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} --body "$REVIEW"
