Fix: Add GH_TOKEN for gh CLI authentication

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -87,6 +87,7 @@ jobs:
       - name: Post review comment
         if: steps.openrouter.outputs.review
         env:
+          GH_TOKEN: ${{ github.token }}
           REVIEW: ${{ steps.openrouter.outputs.review }}
         run: |
           gh pr comment ${{ github.event.pull_request.number }} --body "$REVIEW"
