fix: use valid shell option 'bash' instead of '/usr/bin/bash'

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -74,7 +74,7 @@ jobs:
             echo "$MESSAGE" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           fi
-        shell: /usr/bin/bash
+        shell: bash
 
       - name: Post review comment
         uses: actions/github-script@v7
