--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -5,6 +5,11 @@ on:
     branches: [main]
   pull_request_review:
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   review:
     runs-on: ubuntu-latest
